upd share btn, other ui fix (overlay & scrollbar)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,3 +94,24 @@
 .print-force-new-page {
   page-break-before: always;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e5e7eb;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6b7280;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #374151;
+}
